fix styling issues on iOS devices

--- a/src/components/Form/index.css
+++ b/src/components/Form/index.css
@@ -28,6 +28,7 @@
   padding-block: 5px;
   font-family: "Inter", sans-serif;
   background-color: #f4d58d;
+  color: black;
 }
 
 .form--form button:hover {
